# reverse-hh

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  docker-compose.yml
.cursor/rules/: project-conventions.mdc
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_enums_and_catalog_indexes.py  003_company_invites_and_review.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  admin.py  applications.py  auth.py  auth_cookies.py  candidate.py  catalog.py  chats.py  companies.py  complaints.py  deps.py  notifications.py  resumes.py  tests.py  vacancies.py
backend/app/db/: __init__.py  session.py
backend/app/domain/: __init__.py  access.py  applications.py  audit.py  auth.py  candidate_profile.py  chat.py  companies.py  moderation.py  notifications.py  resume_visibility.py  resumes.py  tests.py  vacancies.py
backend/app/models/: __init__.py  application.py  assessment.py  chat.py  company.py  enums.py  misc.py  moderation.py  resume.py  types.py  user.py  vacancy.py
backend/app/services/: __init__.py  email.py
backend/tests/: conftest.py  test_applications.py  test_auth.py  test_chat.py  test_companies.py  test_domain.py  test_moderation.py  test_notifications.py  test_resumes.py  test_tests.py  test_vacancies.py
docs/adr/: 0001-monolith-fastapi-vanilla-js.md  0002-domain-layer-and-snapshots.md  0003-application-state-machine.md  (+2 more)
frontend/: index.html
scripts/: create_github_issues.py
(+17 files in other folders)
